GNOME Bugzilla – Bug 674864
Missing tp-chat signals
Last modified: 2012-05-02 09:32:48 UTC
I got this in empathy-chat master: (empathy-chat:8736): GLib-GObject-WARNING **: gsignal.c:2455: signal `member-renamed' is invalid for instance `0x970000' This signal uses to be implemented by the EmpathyContactList interface which has gone away. Thanks GObject for having a not safe signalling system...
Created attachment 212872 [details] [review] tp-chat: add the 'member-renamed' signal It uses to be implemented by the EmpathyContactList interface which has been removed.
Created attachment 212873 [details] [review] tp-chat: add the 'members-changed' signal It uses to be implemented by the EmpathyContactList interface which has been removed.
Looks good. Just wondering why you're using SIG_ for them and not others.
Attachment 212872 [details] pushed as e889f1a - tp-chat: add the 'member-renamed' signal Attachment 212873 [details] pushed as 55b19d4 - tp-chat: add the 'members-changed' signal
(In reply to comment #3) > Looks good. Just wondering why you're using SIG_ for them and not others. I use SIG_ in newly written code but didn't bother changing existing code to reduce the diff.