tp-chat: add the 'member-renamed' signal

It uses to be implemented by the EmpathyContactList interface which has been
removed.

https://bugzilla.gnome.org/show_bug.cgi?id=674864